# aoc2023

./: CMakeLists.txt  aoc2023.code-workspace  readme.md
day01/: CMakeLists.txt
day01/include/: main.h
day01/src/: main.cpp
day02/include/: CMakeLists.txt  main.h
day02/src/: CMakeLists.txt  main.cpp
day03/include/: CMakeLists.txt  schematic.h
day03/src/: CMakeLists.txt  main.cpp  schematic.cpp
day04/include/: CMakeLists.txt  scratchcard.h
day04/src/: CMakeLists.txt  main.cpp  scratchcard.cpp
day05/: input real.txt
day05/include/: CMakeLists.txt  almanac.h  thing.h
day05/src/: CMakeLists.txt  almanac.cpp  main.cpp  thing.cpp
day06/: input.txt
day06/include/: CMakeLists.txt  boatrace.h
day06/src/: CMakeLists.txt  boatrace.cpp  main.cpp
day07/: input.txt
day07/include/: CMakeLists.txt  aocday.h.in  camelcards.h
day07/src/: CMakeLists.txt  camelcards.cpp  main.cpp
day08/: input real.txt
day08/include/: CMakeLists.txt  lrmap.h
day08/src/: CMakeLists.txt  lrmap.cpp  main.cpp
day09/include/: CMakeLists.txt  oasis.h
day09/src/: main.cpp  (+2 more)
day10/: input test a1.txt  input test a2.txt  input test b1.txt  input test b3.txt  input.txt
day11/: input.txt
day12/: input real.txt
day13/: input real.txt
day14/: input.txt
day15/: input real.txt
day16/: input.txt
day17/: input.txt
day18/: input real.txt
libaoc/: CMakeLists.txt
libaoc/include/: CMakeLists.txt  a_star.h  aoc.h  aocgrid.h  debug.h  heading.h  strings.h  timing.h  utf8.h
libaoc/src/: CMakeLists.txt  aoc.cpp  debug.cpp  heading.cpp  strings.cpp  timing.cpp  utf8.cpp
(+52 files in other folders)
